Attempting to fix the banner image on mobile

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     background-color: #999;
 }
